[gd_scene load_steps=5 format=3 uid="uid://dohjlr418pmij"]

[ext_resource type="Script" path="res://base_scenes/base_game.gd" id="1_r8bap"]
[ext_resource type="PackedScene" uid="uid://ll72s4r8qp7s" path="res://transfer/conductor.tscn" id="2_2yinu"]
[ext_resource type="PackedScene" uid="uid://co7bxbj5rgw1" path="res://base_scenes/game/state_machine.tscn" id="2_hb82y"]
[ext_resource type="PackedScene" uid="uid://cl13sbg7jqhmw" path="res://base_scenes/game/line.tscn" id="5_uvm5r"]

[node name="BaseGame" type="Node2D"]
script = ExtResource("1_r8bap")

[node name="StateMachine" parent="." instance=ExtResource("2_hb82y")]

[node name="Conductor" parent="." instance=ExtResource("2_2yinu")]

[node name="ColorRect" parent="." instance=ExtResource("5_uvm5r")]

[node name="cars" type="Node2D" parent="."]

[connection signal="left_press" from="StateMachine" to="." method="_on_state_machine_left_press"]
[connection signal="report_beat" from="Conductor" to="." method="_on_conductor_report_beat"]
[connection signal="report_measure" from="Conductor" to="." method="_on_conductor_report_measure"]
